added recommended hydration api
